# bible

./: README.md  pyproject.toml
.github/workflows/: main.yml
data/new/: 01-matthew.csv  03-luke.csv  04-john.csv  05-acts.csv  06-romans.csv  1-matthew.csv  10-ephesians.csv  11-philippians.csv  12-colossians.csv  13-1-thessalonians.csv  14-2-thessalonians.csv  15-1-timothy.csv  16-2-timothy.csv  17-titus.csv  18-philemon.csv  19-hebrews.csv  2-mark.csv  20-james.csv  21-1-peter.csv  22-2-peter.csv  23-1-john.csv  24-2-john.csv  25-3-john.csv  26-jude.csv  27-revelation.csv  5-acts.csv  7-1-corinthians.csv  8-2-corinthians.csv  9-galatians.csv
data/old/: 01-genesis.csv  03-leviticus.csv  08-ruth.csv  09-1-samuel.csv  10-2-samuel.csv  11-1-kings.csv  12-2-kings.csv  13-1-chronicles.csv  14-2-chronicles.csv  15-ezra.csv  16-nehemiah.csv  17-esther.csv  18-job.csv  19-psalms.csv  2-exodus.csv  20-proverbs.csv  21-ecclesiastes.csv  22-song-of-solomon.csv  23-isaiah.csv  24-jeremiah.csv  25-lamentations.csv  26-ezekiel.csv  27-daniel.csv  28-hosea.csv  29-joel.csv  30-amos.csv  31-obadiah.csv  32-jonah.csv  33-micah.csv  34-nahum.csv  35-habakkuk.csv  36-zephaniah.csv  37-haggai.csv  38-zechariah.csv  39-malachi.csv  4-numbers.csv  5-deuteronomy.csv  6-joshua.csv  7-judges.csv
tests/: conftest.py  test_dataframe.py  test_new.py  test_old.py
tests/constants/alphabets/: greek.py  hebrew.py
tests/constants/codepoints/: greek.py  hebrew.py
tests/functions/: get_dataframe.py  ord_keys.py
