[tool.poetry]
name = "bible"
version = "0.1.0"
description = ""
authors = ["Ivan Dustin Bilon <ivan22.dust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"


[tool.poetry.group.dev.dependencies]
pandas = "^1.5.3"
pytest = "^7.2.2"
black = "^23.1.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
